[tool.robotpy-build.metadata]
name = "robotpy-hal"
description = "Binary wrapper for FRC HAL"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-hal"
license = "BSD-3-Clause"
install_requires = [
    "robotpy-wpiutil~=2023.4.1",
]

[build-system]
requires = [
    "robotpy-build<2024.0.0,>=2023.1.1",
    "robotpy-wpiutil~=2023.4.1",
]

[tool.robotpy-build]
base_package = "hal"


[tool.robotpy-build.wrappers."hal".maven_lib_download]
artifact_id = "hal-cpp"
group_id = "edu.wpi.first.hal"
# repo_url = "https://frcmaven.wpi.edu/artifactory/release"
repo_url = "https://frcmaven.wpi.edu/artifactory/release"
version = "2023.4.1"

libs = ["wpiHal"]

[tool.robotpy-build.wrappers."hal"]

name = "wpiHal"
sources = [
    "hal/src/hal.cpp"
]

generation_data = "gen"
depends = ["wpiutil"]

[tool.robotpy-build.wrappers."hal".autogen_headers]
# hal
Accelerometer = "hal/Accelerometer.h"
AddressableLED = "hal/AddressableLED.h"
AddressableLEDTypes = "hal/AddressableLEDTypes.h"
AnalogAccumulator = "hal/AnalogAccumulator.h"
AnalogGyro = "hal/AnalogGyro.h"
AnalogInput = "hal/AnalogInput.h"
AnalogOutput = "hal/AnalogOutput.h"
AnalogTrigger = "hal/AnalogTrigger.h"
CAN = "hal/CAN.h"
CANAPI = "hal/CANAPI.h"
CANAPITypes = "hal/CANAPITypes.h"
CTREPCM = "hal/CTREPCM.h"
# ChipObject = "hal/ChipObject.h"
Constants = "hal/Constants.h"
Counter = "hal/Counter.h"
DIO = "hal/DIO.h"
# DMA = "hal/DMA.h"
DriverStation = "hal/DriverStation.h"
DriverStationTypes = "hal/DriverStationTypes.h"
DutyCycle = "hal/DutyCycle.h"
Encoder = "hal/Encoder.h"
# Errors = "hal/Errors.h"
Extensions = "hal/Extensions.h"
FRCUsageReporting = "hal/FRCUsageReporting.h"
# HAL = "hal/HAL.h"
HALBase = "hal/HALBase.h"
I2C = "hal/I2C.h"
I2CTypes = "hal/I2CTypes.h"
Interrupts = "hal/Interrupts.h"
Main = "hal/Main.h"
Notifier = "hal/Notifier.h"
PWM = "hal/PWM.h"
Ports = "hal/Ports.h"
Power = "hal/Power.h"
PowerDistribution = "hal/PowerDistribution.h"
REVPH = "hal/REVPH.h"
Relay = "hal/Relay.h"
SPI = "hal/SPI.h"
SPITypes = "hal/SPITypes.h"
SerialPort = "hal/SerialPort.h"
SimDevice = "hal/SimDevice.h"
Threads = "hal/Threads.h"
# Types = "hal/Types.h"
# Value = "hal/Value.h"

# hal/cpp
# SerialHelper = "hal/cpp/SerialHelper.h"
# UnsafeDIO = "hal/cpp/UnsafeDIO.h"
# fpga_clock = "hal/cpp/fpga_clock.h"

# hal/handles
# DigitalHandleResource = "hal/handles/DigitalHandleResource.h"
HandlesInternal = "hal/handles/HandlesInternal.h"
# IndexedClassedHandleResource = "hal/handles/IndexedClassedHandleResource.h"
# IndexedHandleResource = "hal/handles/IndexedHandleResource.h"
# LimitedClassedHandleResource = "hal/handles/LimitedClassedHandleResource.h"
# LimitedHandleResource = "hal/handles/LimitedHandleResource.h"
# UnlimitedHandleResource = "hal/handles/UnlimitedHandleResource.h"

[tool.robotpy-build.wrappers."hal".autogen_headers.override.platform_linux_athena]
SerialHelper = "hal/cpp/SerialHelper.h"


[tool.robotpy-build.wrappers."hal.simulation"]

name = "hal_simulation"
extension = "_simulation"
sources = [
    "hal/simulation/main.cpp",
    "hal/simulation/resethandles.cpp",
]

generation_data = "gen/simulation"
depends = ["wpiutil", "wpiHal"]

[tool.robotpy-build.wrappers."hal.simulation".autogen_headers]
AccelerometerData = "hal/simulation/AccelerometerData.h"
AddressableLEDData = "hal/simulation/AddressableLEDData.h"
AnalogGyroData = "hal/simulation/AnalogGyroData.h"
AnalogInData = "hal/simulation/AnalogInData.h"
AnalogOutData = "hal/simulation/AnalogOutData.h"
AnalogTriggerData = "hal/simulation/AnalogTriggerData.h"
CTREPCMData = "hal/simulation/CTREPCMData.h"
# CanData = "hal/simulation/CanData.h"
DIOData = "hal/simulation/DIOData.h"
DigitalPWMData = "hal/simulation/DigitalPWMData.h"
DriverStationData = "hal/simulation/DriverStationData.h"
DutyCycleData = "hal/simulation/DutyCycleData.h"
EncoderData = "hal/simulation/EncoderData.h"
# I2CData = "hal/simulation/I2CData.h"
MockHooks = "hal/simulation/MockHooks.h"
NotifierData = "hal/simulation/NotifierData.h"
# NotifyListener = "hal/simulation/NotifyListener.h"
PWMData = "hal/simulation/PWMData.h"
PowerDistributionData = "hal/simulation/PowerDistributionData.h"
REVPHData = "hal/simulation/REVPHData.h"
RelayData = "hal/simulation/RelayData.h"
Reset = "hal/simulation/Reset.h"
RoboRioData = "hal/simulation/RoboRioData.h"
SPIAccelerometerData = "hal/simulation/SPIAccelerometerData.h"
# SPIData = "hal/simulation/SPIData.h"
# SimCallbackRegistry = "hal/simulation/SimCallbackRegistry.h"
# SimDataValue = "hal/simulation/SimDataValue.h"
SimDeviceData = "hal/simulation/SimDeviceData.h"
