[build-system]
build-backend = "hatchling.build"
requires = [
    "semiwrap~=0.3.0",
    "hatch-meson~=0.1.0",
    "hatchling",
    "robotpy-native-wpihal==2026.2.2",
    "robotpy-wpiutil==2026.2.2",
]

[project]
name = "robotpy-hal"
version = "2026.2.2"
description = "Binary wrapper for FRC HAL"
authors = [
    {name = "RobotPy Development Team", email = "robotpy@googlegroups.com"},
]
license = "BSD-3-Clause"
dependencies = [
    "robotpy-native-wpihal==2026.2.2",
    "robotpy-wpiutil==2026.2.2",
]

[project.urls]
"Source code" = "https://github.com/robotpy/mostrobotpy"


[tool.hatch.build.hooks.robotpy]
version_file = "hal/version.py"

[tool.hatch.build.hooks.semiwrap]

[tool.hatch.build.hooks.meson]

[tool.hatch.build.targets.wheel]
packages = ["hal"]


[tool.semiwrap]
update_init = []

# NOTE: By default we ignore all HAL APIs, as most of them are exposed in WPILib
# somewhere. If you find something that you need, file a bug and we can add it!

scan_headers_ignore = [
    "hal/*",

    "sim_cb.h",
    "sim_value_cb.h",
]

[tool.semiwrap.extension_modules."hal._wpiHal"]
name = "wpihal"
wraps = ["robotpy-native-wpihal"]
depends = ["wpiutil"]

[tool.semiwrap.extension_modules."hal._wpiHal".headers]
# hal
Accelerometer = "hal/Accelerometer.h"
CANAPITypes = "hal/CANAPITypes.h"
DriverStation = "hal/DriverStation.h"
DriverStationTypes = "hal/DriverStationTypes.h"
Extensions = "hal/Extensions.h"
FRCUsageReporting = "hal/FRCUsageReporting.h"
HALBase = "hal/HALBase.h"
Main = "hal/Main.h"
Notifier = "hal/Notifier.h"
SPITypes = "hal/SPITypes.h"
SimDevice = "hal/SimDevice.h"
Threads = "hal/Threads.h"
# Types = "hal/Types.h"
# Value = "hal/Value.h"

# hal/cpp
SerialHelper = { header="hal/cpp/SerialHelper.h", enable_if="platform_machine == 'roborio'" }

[tool.semiwrap.extension_modules."hal.simulation._simulation"]
name = "hal_simulation"
wraps = ["robotpy-native-wpihal"]
depends = ["wpiutil"]
yaml_path = "semiwrap/simulation"

[tool.semiwrap.extension_modules."hal.simulation._simulation".headers]
DriverStationData = "hal/simulation/DriverStationData.h"
MockHooks = "hal/simulation/MockHooks.h"
NotifierData = "hal/simulation/NotifierData.h"
Reset = "hal/simulation/Reset.h"
SimDeviceData = "hal/simulation/SimDeviceData.h"
