[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling", 
    "hatch-robotpy~=0.2",
]

[project]
name = "robotpy-halsim-ds-socket"
version = "2025.3.2.2"
description = "WPILib simulator DS Socket Extension"
authors = [
    {name = "RobotPy Development Team", email = "robotpy@googlegroups.com"},
]
license = "BSD-3-Clause"
dependencies = [
    "robotpy-native-wpihal==2025.3.2.1",
    "robotpy-native-wpinet==2025.3.2.1",
]

[project.entry-points."robotpy_sim.2026"]
ds-socket = "halsim_ds_socket"


[tool.hatch.build.hooks.robotpy]
version_file = "halsim_ds_socket/version.py"

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "halsim_ds_socket"
group_id = "edu.wpi.first.halsim"
repo_url = "https://frcmaven.wpi.edu/artifactory/development"
version = "2025.3.2-54-g7a3df61"
use_headers = false

extract_to = "halsim_ds_socket"
libs = ["halsim_ds_socket"]


[tool.hatch.build.targets.wheel]
packages = ["halsim_ds_socket"]