[build-system]
build-backend = "hatchling.build"
requires = [
    "semiwrap~=0.2.5",
    "hatch-meson~=0.1.0",
    "hatch-robotpy~=0.2.0",
    "hatchling",
    "robotpy-wpiutil==2026.1.1",
    "robotpy-wpimath==2026.1.1",
    "robotpy-hal==2026.1.1",
    "pyntcore==2026.1.1",
]

[project]
name = "robotpy-halsim-gui"
version = "2026.1.1"
description = "WPILib simulation GUI"
authors = [
    {name = "RobotPy Development Team", email = "robotpy@googlegroups.com"},
]
license = "BSD-3-Clause"
dependencies = [
    "robotpy-wpiutil==2026.1.1",
    "robotpy-wpimath==2026.1.1",
    "robotpy-hal==2026.1.1",
    "pyntcore==2026.1.1",
]

[project.urls]
"Source code" = "https://github.com/robotpy/mostrobotpy"


[tool.hatch.build.hooks.robotpy]
version_file = "halsim_gui/version.py"

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "halsim_gui"
group_id = "edu.wpi.first.halsim"
repo_url = "https://frcmaven.wpi.edu/artifactory/release"
version = "2026.1.1"
use_headers = true

libs = ["halsim_gui"]
extract_to = "halsim_gui"

[tool.hatch.build.hooks.semiwrap]

[tool.hatch.build.hooks.meson]

[tool.hatch.build.targets.wheel]
packages = ["halsim_gui"]


[tool.semiwrap]
[tool.semiwrap.extension_modules."halsim_gui._ext._halsim_gui_ext"]
name = "halsim_gui_ext"
depends = ["wpihal", "wpimath", "ntcore"]
