[build-system]
build-backend = "hatchling.build"
requires = [
    "semiwrap~=0.3.0",
    "hatch-meson~=0.1.2",
    "hatch-robotpy~=0.2.1",
    "hatchling",
    "robotpy-wpiutil==2027.0.0a5.post1",
    "robotpy-wpimath==2027.0.0a5.post1",
    "robotpy-hal==2027.0.0a5.post1",
    "pyntcore==2027.0.0a5.post1",
]

[project]
name = "robotpy-halsim-gui"
version = "2027.0.0a5.post1"
description = "WPILib simulation GUI"
authors = [
    {name = "RobotPy Development Team", email = "robotpy@googlegroups.com"},
]
license = "BSD-3-Clause"
dependencies = [
    "robotpy-wpiutil==2027.0.0a5.post1",
    "robotpy-wpimath==2027.0.0a5.post1",
    "robotpy-hal==2027.0.0a5.post1",
    "pyntcore==2027.0.0a5.post1",
]

[project.urls]
"Source code" = "https://github.com/robotpy/mostrobotpy"


[tool.hatch.build.hooks.robotpy]
version_file = "halsim_gui/version.py"

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "halsim_gui"
group_id = "org.wpilib.halsim"
repo_url = "https://frcmaven.wpi.edu/artifactory/release-2027"
version = "2027.0.0-alpha-5"
use_headers = true

libs = ["halsim_gui"]
extract_to = "halsim_gui"

[tool.hatch.build.hooks.semiwrap]

[tool.hatch.build.hooks.meson]

[tool.hatch.build.targets.wheel]
packages = ["halsim_gui"]


[tool.semiwrap]
[tool.semiwrap.extension_modules."halsim_gui._ext._halsim_gui_ext"]
name = "halsim_gui_ext"
depends = ["wpihal", "wpimath", "ntcore"]
