[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-robotpy~=0.2.1",
]

[project]
name = "robotpy-halsim-ws"
version = "2027.0.0a2"
description = "WPILib simulator websim Extensions"
authors = [
    {name = "RobotPy Development Team", email = "robotpy@googlegroups.com"},
]
license = "BSD-3-Clause"
dependencies = [
    "robotpy-native-wpihal==2027.0.0a2",
    "robotpy-native-wpinet==2027.0.0a2",
]

[project.entry-points.robotpysimext]
ws-server = "halsim_ws.server"
ws-client = "halsim_ws.client"

[project.urls]
"Source code" = "https://github.com/robotpy/mostrobotpy"


[tool.hatch.build.hooks.robotpy]
version_file = "halsim_ws/version.py"


[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "halsim_ws_server"
group_id = "edu.wpi.first.halsim"
repo_url = "https://frcmaven.wpi.edu/artifactory/release-2027"
version = "2027.0.0-alpha-2"
use_headers = false

extract_to = "halsim_ws/server"
libs = ["halsim_ws_server"]

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "halsim_ws_client"
group_id = "edu.wpi.first.halsim"
repo_url = "https://frcmaven.wpi.edu/artifactory/release-2027"
version = "2027.0.0-alpha-2"
use_headers = false

extract_to = "halsim_ws/client"
libs = ["halsim_ws_client"]


[tool.hatch.build.targets.wheel]
packages = ["halsim_ws"]
