[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-nativelib~=0.2.0",
    "hatch-robotpy~=0.2",
    "robotpy-native-wpiutil==2027.0.0a1.dev0",
    "robotpy-native-wpimath==2027.0.0a1.dev0",
]

[project]
name = "robotpy-native-apriltag"
version = "2027.0.0a1.dev0"
description = "WPILib AprilTag Library"
license = "BSD-3-Clause"

dependencies = [
    "robotpy-native-wpiutil==2027.0.0a1.dev0",
    "robotpy-native-wpimath==2027.0.0a1.dev0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/native"]

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "apriltag-cpp"
group_id = "edu.wpi.first.apriltag"
repo_url = "https://frcmaven.wpi.edu/artifactory/development-2027"
version = "2025.3.2-123-g22d12d2"

extract_to = "src/native/apriltag"
libs = ["apriltag"]

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/native/apriltag/robotpy-native-apriltag.pc"
name = "apriltag"

includedir = "src/native/apriltag/include"
libdir = "src/native/apriltag/lib"
shared_libraries = ["apriltag"]
requires = ["robotpy-native-wpiutil", "robotpy-native-wpimath"]
