[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-nativelib~=0.2.0",
    "hatch-robotpy~=0.2",
    "robotpy-native-wpiutil==2025.3.2.1",
    "robotpy-native-wpinet==2025.3.2.1",
]

[project]
name = "robotpy-native-ntcore"
version = "2025.3.2.1"
description = "WPILib NetworkTables Library"
license = "BSD-3-Clause"

dependencies = [
    "robotpy-native-wpiutil==2025.3.2.1",
    "robotpy-native-wpinet==2025.3.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/native"]

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "ntcore-cpp"
group_id = "edu.wpi.first.ntcore"
repo_url = "https://frcmaven.wpi.edu/artifactory/development"
version = "2025.3.2-54-g7a3df61"

extract_to = "src/native/ntcore"
libs = ["ntcore"]

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/native/ntcore/robotpy-native-ntcore.pc"
name = "ntcore"

includedir = "src/native/ntcore/include"
libdir = "src/native/ntcore/lib"
shared_libraries = ["ntcore"]
requires = ["robotpy-native-wpinet", "robotpy-native-wpiutil"]
