[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-nativelib~=0.2.0",
    "hatch-robotpy~=0.2.1",
    "robotpy-native-wpiutil==2027.0.0a6.post4",
    "robotpy-native-wpinet==2027.0.0a6.post4",
    "robotpy-native-datalog==2027.0.0a6.post4",
]

[project]
name = "robotpy-native-ntcore"
version = "2027.0.0a6.post4"
description = "WPILib NetworkTables Library"
requires-python = ">=3.11"
license = "BSD-3-Clause"

dependencies = [
    "robotpy-native-wpiutil==2027.0.0a6.post4",
    "robotpy-native-wpinet==2027.0.0a6.post4",
    "robotpy-native-datalog==2027.0.0a6.post4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/native"]

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "ntcore-cpp"
group_id = "org.wpilib.ntcore"
repo_url = "https://frcmaven.wpi.edu/artifactory/development-2027"
version = "2027.0.0-alpha-6-167-gdb3a9c428"

extract_to = "src/native/ntcore"
libs = ["ntcore"]

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/native/ntcore/robotpy-native-ntcore.pc"
name = "ntcore"

includedir = "src/native/ntcore/include"
libdir = "src/native/ntcore/lib"
shared_libraries = ["ntcore"]
requires = ["robotpy-native-datalog", "robotpy-native-wpinet", "robotpy-native-wpiutil"]
