[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-nativelib~=0.2.0",
    "hatch-robotpy~=0.2.0",
    "robotpy-native-wpiutil==2026.1.1b1",
]

[project]
name = "robotpy-native-wpihal"
version = "2026.1.1b1"
description = "WPILib HAL implementation"
license = "BSD-3-Clause"

dependencies = [
    "robotpy-native-wpiutil==2026.1.1b1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/native"]

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "hal-cpp"
group_id = "edu.wpi.first.hal"
repo_url = "https://frcmaven.wpi.edu/artifactory/development"
version = "2026.1.1-beta-1"

extract_to = "src/native/wpihal"
libs = ["wpiHal"]

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/native/wpihal/robotpy-native-wpihal.pc"
name = "wpihal"

includedir = "src/native/wpihal/include"
libdir = "src/native/wpihal/lib"
shared_libraries = ["wpiHal"]
requires = ["robotpy-native-wpiutil"]
