[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-nativelib~=0.2.0",
    "hatch-robotpy~=0.2.1",
    "robotpy-native-wpiutil==2027.0.0a3",
    "robotpy-native-ntcore==2027.0.0a3",
]

[project]
name = "robotpy-native-wpihal"
version = "2027.0.0a3"
description = "WPILib HAL implementation"
license = "BSD-3-Clause"

dependencies = [
    "robotpy-native-wpiutil==2027.0.0a3",
    "robotpy-native-ntcore==2027.0.0a3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/native"]

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "hal-cpp"
group_id = "org.wpilib.hal"
repo_url = "https://frcmaven.wpi.edu/artifactory/development-2027"
version = "2027.0.0-alpha-3-146-g936be71"

extract_to = "src/native/wpihal"
libs = ["wpiHal"]

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/native/wpihal/robotpy-native-wpihal.pc"
name = "wpihal"

includedir = "src/native/wpihal/include"
libdir = "src/native/wpihal/lib"
shared_libraries = ["wpiHal"]
requires = ["robotpy-native-wpiutil", "robotpy-native-ntcore"]
