[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-nativelib~=0.2.0",
    "hatch-robotpy~=0.2",
    "robotpy-native-wpiutil==2025.3.2",
]

[project]
name = "robotpy-native-wpimath"
version = "2025.3.2"
description = "WPILib Math Library"
license = "BSD-3-Clause"

dependencies = [
    "robotpy-native-wpiutil==2025.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/native"]

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "wpimath-cpp"
group_id = "edu.wpi.first.wpimath"
repo_url = "https://frcmaven.wpi.edu/artifactory/release"
version = "2025.3.2"

extract_to = "src/native/wpimath"
libs = ["wpimath"]

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/native/wpimath/robotpy-native-wpimath.pc"
name = "wpimath"

includedir = "src/native/wpimath/include"
libdir = "src/native/wpimath/lib"
shared_libraries = ["wpimath"]
requires = ["robotpy-native-wpiutil"]
