[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-nativelib~=0.2.0",
    "hatch-robotpy~=0.2.0",
    "robotpy-native-wpiutil==2026.0.0a1",
]

[project]
name = "robotpy-native-wpinet"
version = "2026.0.0a1"
description = "WPILib Networking Library"
license = "BSD-3-Clause"

dependencies = [
    "robotpy-native-wpiutil==2026.0.0a1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/native"]

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "wpinet-cpp"
group_id = "edu.wpi.first.wpinet"
repo_url = "https://frcmaven.wpi.edu/artifactory/development"
version = "2026.0.0-alpha-1"

extract_to = "src/native/wpinet"
libs = ["wpinet"]

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/native/wpinet/robotpy-native-wpinet.pc"
name = "wpinet"

includedir = "src/native/wpinet/include"
libdir = "src/native/wpinet/lib"
shared_libraries = ["wpinet"]
requires = ["robotpy-native-wpiutil"]
