[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-nativelib~=0.2.0",
    "hatch-robotpy~=0.2.1",
    "robotpy-native-wpiutil==2027.0.0a3",
]

[project]
name = "robotpy-native-wpinet"
version = "2027.0.0a3"
description = "WPILib Networking Library"
license = "BSD-3-Clause"

dependencies = [
    "robotpy-native-wpiutil==2027.0.0a3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/native"]

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "wpinet-cpp"
group_id = "org.wpilib.wpinet"
repo_url = "https://frcmaven.wpi.edu/artifactory/development-2027"
version = "2027.0.0-alpha-3-146-g936be71"

extract_to = "src/native/wpinet"
libs = ["wpinet"]

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/native/wpinet/robotpy-native-wpinet.pc"
name = "wpinet"

includedir = "src/native/wpinet/include"
libdir = "src/native/wpinet/lib"
shared_libraries = ["wpinet"]
requires = ["robotpy-native-wpiutil"]
